[gd_scene load_steps=15 format=3 uid="uid://d0cn8jcmfck7l"]

[ext_resource type="Theme" uid="uid://dlbjtfagpatv2" path="res://ui/theme.tres" id="1_hgyfx"]
[ext_resource type="Script" uid="uid://co26hhbdo4hdo" path="res://ui/game_ui.gd" id="2_vtgmo"]
[ext_resource type="Texture2D" uid="uid://flf2fiipa5nc" path="res://ui/assets/button_normal.png" id="3_f7kcv"]
[ext_resource type="Texture2D" uid="uid://cple8snaikfg5" path="res://ui/assets/button_pressed.png" id="4_vad0l"]
[ext_resource type="Texture2D" uid="uid://db8lev7uthdqs" path="res://ui/assets/button_hover.png" id="5_fgkwl"]
[ext_resource type="Texture2D" uid="uid://dr3ngx5inp3ww" path="res://ui/assets/pass.png" id="6_gm2vc"]
[ext_resource type="Texture2D" uid="uid://bpadpmb8j8isy" path="res://ui/assets/banner_black.png" id="7_85ca7"]
[ext_resource type="Texture2D" uid="uid://dml4owf7dv68b" path="res://ui/assets/banner_white.png" id="8_iqfqv"]
[ext_resource type="Texture2D" uid="uid://bfcheqmj7qpq1" path="res://ui/assets/panel.png" id="9_f7kcv"]
[ext_resource type="Texture2D" uid="uid://dlngg70esr6xe" path="res://ui/assets/menu.png" id="10_vad0l"]

[sub_resource type="Animation" id="Animation_mfdv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BannerBlack:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1163, -81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BannerWhite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -86)]
}

[sub_resource type="Animation" id="Animation_hve3p"]
resource_name = "turn_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BannerBlack:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1163, -81), Vector2(950, -81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BannerWhite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2, -86), Vector2(-214, -86)]
}

[sub_resource type="Animation" id="Animation_iotsf"]
resource_name = "turn_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BannerBlack:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(950, -81), Vector2(1163, -81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BannerWhite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-214, -86), Vector2(-2, -86)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iotsf"]
_data = {
&"RESET": SubResource("Animation_mfdv2"),
&"turn_black": SubResource("Animation_hve3p"),
&"turn_white": SubResource("Animation_iotsf")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hgyfx")
script = ExtResource("2_vtgmo")

[node name="CapturedWhite" type="Label" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 54.0
offset_right = 1120.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0.564706, 0.0941176, 0.0941176, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 60
text = "Captured:
0"

[node name="CapturedBlack" type="Label" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 54.0
offset_right = 184.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0.564706, 0.0941176, 0.0941176, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 60
text = "Captured:
0"

[node name="PassButtonBlack" type="TextureButton" parent="."]
custom_minimum_size = Vector2(150, 80)
layout_mode = 0
offset_left = 38.0
offset_top = 530.0
offset_right = 188.0
offset_bottom = 610.0
texture_normal = ExtResource("3_f7kcv")
texture_pressed = ExtResource("4_vad0l")
texture_hover = ExtResource("5_fgkwl")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="PassButtonBlack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 27
theme_override_constants/margin_bottom = 27

[node name="TextureRect" type="TextureRect" parent="PassButtonBlack/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_gm2vc")
expand_mode = 2
stretch_mode = 5

[node name="PassButtonWhite" type="TextureButton" parent="."]
custom_minimum_size = Vector2(150, 80)
layout_mode = 0
offset_left = 968.0
offset_top = 533.0
offset_right = 1118.0
offset_bottom = 613.0
texture_normal = ExtResource("3_f7kcv")
texture_pressed = ExtResource("4_vad0l")
texture_hover = ExtResource("5_fgkwl")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="PassButtonWhite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 27
theme_override_constants/margin_bottom = 27

[node name="TextureRect" type="TextureRect" parent="PassButtonWhite/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_gm2vc")
expand_mode = 2
stretch_mode = 5

[node name="BannerBlack" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1163.0
offset_top = -81.0
offset_right = 1436.0
offset_bottom = 970.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_85ca7")
expand_mode = 1

[node name="BannerWhite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -86.0
offset_right = 271.0
offset_bottom = 965.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("8_iqfqv")
expand_mode = 1

[node name="Panel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hgyfx")

[node name="Texture" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.5
offset_top = -189.5
offset_right = 279.5
offset_bottom = 189.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_f7kcv")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Texture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -143.5
offset_right = 196.0
offset_bottom = 143.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/Texture/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "Black won the Game!
Final Score: 6 to 5"
horizontal_alignment = 1

[node name="MenuButton" type="TextureButton" parent="Panel/Texture/VBoxContainer"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
texture_normal = ExtResource("3_f7kcv")
texture_pressed = ExtResource("4_vad0l")
texture_hover = ExtResource("5_fgkwl")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Panel/Texture/VBoxContainer/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 27
theme_override_constants/margin_bottom = 27

[node name="TextureRect" type="TextureRect" parent="Panel/Texture/VBoxContainer/MenuButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("10_vad0l")
expand_mode = 2
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iotsf")
}

[connection signal="pressed" from="PassButtonBlack" to="." method="_on_pass_button_black_pressed"]
[connection signal="pressed" from="PassButtonWhite" to="." method="_on_pass_button_white_pressed"]
[connection signal="pressed" from="Panel/Texture/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
